[Chromium] Regression: Web Inspector tool-tips pixellated with --force-device-scale-factor=2 https://bugs.webkit.org/show_bug.cgi?id=95875

Reviewed by Vsevolod Vlasov.

The overlay canvas is scaled according to the actual devicePixelRatio of the inspected page, while retaining its original CSS size.

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::reset):
* inspector/InspectorOverlayPage.html:

Canonical link: https://commits.webkit.org/113934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127833 268f45cc-cd09-0410-ab3c-d52691b4dbfc